flex/04-flex-information/style.css
body {
  font-family: 'Courier New', Courier, monospace;
}

img {
  width: 100px;
  height: 100px;
}

.title {
  font-size: 36px;
  font-weight: 900;
}

/* do not edit this footer */
.footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 52px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #eee;
}

/* Changes */
.header {
  display: flex;
  justify-content: center;
}

.body {
  display: flex;
  justify-content: space-between;
}

.body-one,
.body-two,
.body-three,
.body-four {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.text {
  text-align: center;
}

